# libraryManagementSystem

./: .gitignore  .gitmodules  AccountManager.cpp  AccountManager.h  BookInfo.cpp  BookInfo.h  BookManager.cpp  BookManager.h  BookSearch.cpp  BookSearch.h  CMakeLists.txt  CMakePresets.json  EntryManager.cpp  EntryManager.h  LoanManager.cpp  LoanManager.h  MenuManager.cpp  MenuManager.h  Staff.cpp  Staff.h  User.cpp  User.h  extern.h  main.cpp  schema.sql  sha256.cpp  sha256.h  test.cpp
libpqxxbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  libpqxx-targets.cmake  libpqxx.pc  libpqxx.sln
libpqxxbuild/include/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake
libpqxxbuild/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  pqxx.vcxproj  pqxx.vcxproj.filters
libpqxxbuild/src/pqxx.dir/Debug/pqxx.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  (+6 more)
libpqxxbuild/test/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  runner.vcxproj  runner.vcxproj.filters
libpqxxbuild/test/runner.dir/Debug/: runner.exe.recipe
libpqxxbuild/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
libpqxxbuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+19 files in other folders)
